# krust-template

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/io/github/bamboo/krust/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/io/github/bamboo/krust/: Backend.kt  MainActivity.kt  MainScreen.kt  protocol.kt
app/src/main/java/io/github/bamboo/krust/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/io/github/bamboo/krust/: JsonEncodingTest.kt
backend/: Cargo.toml
backend/src/: agent_ref.rs  callback.rs  lib.rs
backend/src/agent/: mod.rs  protocol.rs
gradle/plugins/src/main/kotlin/: krust-template.settings.gradle.kts
gradle/plugins/src/main/kotlin/krust/: KrustInit.kt
gradle/wrapper/: gradle-wrapper.properties
