[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
jni = "0.19.0"
ndk-context = "0.1.0"
tokio = { version = "1.17.0", features = ["rt", "sync", "time", "macros"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
eyre = "0.6.8"
lazy_static = "1.4.0"

[target.'cfg(target_os = "android")'.dependencies]
log = "0.4.16"
ndk-glue = "0.6.1"

[lib]
crate_type = ["staticlib", "dylib"]
