[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
jni = "0.21"
ndk-context = "0.1"
tokio = { version = "1.35", features = ["rt", "sync", "time", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
eyre = "0.6"
lazy_static = "1.4"

[target.'cfg(target_os = "android")'.dependencies]
log = "0.4"
ndk-glue = "0.7"

[lib]
crate_type = ["staticlib", "dylib"]
